Стилизация главной страницы
Исправил ошибки

--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
           <img class="main-header-logo" src="img/logo-technomart.svg" width="108" height="18" alt="Логотип магазина Техномарт">
         </a>
         <form>
-          <label class="search">Поиск:<input type="search"></label>
+          <input class="search" type="search" placeholder="Поиск:">
         </form>
         <section class="order-section">
           <ul class="order-section-list">
@@ -58,7 +58,7 @@
     <main class="container">
       <section class="breadcrumbs">
         <ul class="breadcrumbs-list">
-          <li><a href="index.html"><img src="https://via.placeholder.com/12x14" height="12" width="14" alt="Главная страница"></a></li>
+          <li><a href="index.html"><img src="img/symbols/icon-home.svg" height="12" width="14" alt="Главная страница"></a></li>
           <li><a href="blank.html">Каталог</a></li>
           <li><a href="blank.html">Инструмент</a></li>
           <li><a>Перфораторы</a></li>
@@ -119,147 +119,145 @@
             <li><button type="button" >От большего к меньшему</button></li>
           </ul>
         </section>
-        <div class="text-visibility">
-          <section>
-            <h2 class="visually-hidden">Каталог перфораторов</h2>
-            <ul class="perforators-list">
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
-                  <p>
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
-                  </p>
-                </a>
+        <section>
+          <h2 class="visually-hidden">Каталог перфораторов</h2>
+          <ul class="perforators-list">
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
+                  <del class="pass-through-text">30500 Р.</del>
+                  <ins class="new-price">25500 Р.</ins>
                 </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
-                  <p>
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
-                  </p>
-                </a>
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
+                  <del class="pass-through-text">30500 Р.</del>
+                  <ins class="new-price">25500 Р.</ins>
                 </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
-                  <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
-                  <p>
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
-                  </p>
-                </a>
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
+                  <del class="pass-through-text">30500 Р.</del>
+                  <ins class="new-price">25500 Р.</ins>
                 </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
-                  <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 3000</p>
-                  <p>
-                    <del class="pass-through-text">22500 Р.</del>
-                    <ins class="new-price">15500 Р.</ins>
-                  </p> 
-                </a>
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
+                <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 3000</p>
                 <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
-                </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
-                  <p>
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
-                  </p>
-                </a>
+                  <del class="pass-through-text">22500 Р.</del>
+                  <ins class="new-price">15500 Р.</ins>
+                </p> 
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
+                  <del class="pass-through-text">30500 Р.</del>
+                  <ins class="new-price">25500 Р.</ins>
                 </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
-                  <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 2000</p>
-                  <p class="new-price">12500 Р.</p>
-                </a>
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
+                <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 2000</p>
+                <p class="new-price">12500 Р.</p>
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
+                <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 3000</p>
                 <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
-                </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
-                  <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 3000</p>
-                  <p>
-                    <del class="pass-through-text">22500 Р.</del>
-                    <ins class="new-price">15500 Р.</ins>
-                  </p> 
-                </a>
+                  <del class="pass-through-text">22500 Р.</del>
+                  <ins class="new-price">15500 Р.</ins>
+                </p> 
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
+                  <del class="pass-through-text">30500 Р.</del>
+                  <ins class="new-price">25500 Р.</ins>
                 </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 6000</p>
-                  <p>
-                    <del class="pass-through-text">30500 Р.</del>
-                    <ins class="new-price">25500 Р.</ins>
-                  </p>
-                </a>
-                <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
-                </p>
-              </li>
-              <li class="perforators-list-item">
-                <a href="blank.html">
-                  <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
-                  <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
-                  <p class="perforators-item-text">Перфоратор BOSCH BFG 2000</p>
-                  <p class="new-price">12500 Р.</p>
-                </a>
-                <p>
-                  <button type="button">Купить</button>
-                  <button type="button">В закладки</button>
-                </p>
-              </li>
-            </ul>
-          </section>
-        </div>
-          <section class="pagination">
-            <button type="button" disabled>Предыдущая</button>
-            <ul>
-              <li><a class="current">1</a></li>
-              <li><a href="blank.html">2</a></li>
-              <li><a href="blank.html">3</a></li>
-            </ul>
-            <button type="button">Следующая</button>
-          </section>
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+            <li class="perforators-list-item">
+              <a href="blank.html">
+                <img src="img/symbols/catalog-new.svg" width="70" height="70" alt="">
+                <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
+                <p class="perforators-item-text">Перфоратор BOSCH BFG 2000</p>
+                <p class="new-price">12500 Р.</p>
+              </a>
+              <p>
+                <button class="perforators-list-button buy" type="button">Купить</button>
+                <button class="perforators-list-button to-bookmarks" type="button">В закладки</button>
+              </p>
+            </li>
+          </ul>
+        </section>
+        <section class="pagination">
+          <button type="button" disabled>Предыдущая</button>
+          <ul>
+            <li><a class="current">1</a></li>
+            <li><a href="blank.html">2</a></li>
+            <li><a href="blank.html">3</a></li>
+          </ul>
+          <button type="button">Следующая</button>
+        </section>
         <section class="about-perforators">
           <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
           <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
